--- a/.github/workflows/reusable-provision.yml
+++ b/.github/workflows/reusable-provision.yml
@@ -50,11 +50,11 @@ jobs:
           TF_VAR_proxmox_api_token_secret: ${{ secrets.PROXMOX_TOKEN_SECRET }}
           TF_VAR_ssh_public_key: ${{ secrets.ANS_SSH_PUBLIC_KEY }}
         run: |
-          # Ensure state directory exists
-          mkdir -p /opt/terraform
+          # Ensure state directory exists (use home dir for runner permissions)
+          mkdir -p $HOME/.terraform-state
           
           cd terraform/
-          terraform init -backend-config="path=/opt/terraform/terraform.tfstate"
+          terraform init -backend-config="path=$HOME/.terraform-state/terraform.tfstate"
           
           # Select workspace or create it if it doesn't exist
           terraform workspace select ${{ inputs.app_name }} || terraform workspace new ${{ inputs.app_name }}
@@ -91,13 +91,6 @@ jobs:
           # 1. Create the temporary SSH key from secrets
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > id_rsa_temp
           chmod 600 id_rsa_temp
-          
-          # Validate SSH key format
-          if ! ssh-keygen -l -f id_rsa_temp &>/dev/null; then
-            echo "❌ SSH key validation failed"
-            rm id_rsa_temp
-            exit 1
-          fi
           
           cd ansible/
           
