fix: comprehensive review fixes for workflow execution
- Add GH_PAT token for private repo checkout (requires secret)
- Add VLAN/IP cross-validation step before Terraform
- Change vm_cpu_cores and vm_ram_mb to string types (GitHub Actions passes strings)
- Use tonumber() in main.tf to convert back to numbers for Proxmox

Required secret: GH_PAT (Personal Access Token with repo scope)

--- a/.github/workflows/reusable-destroy.yml
+++ b/.github/workflows/reusable-destroy.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           repository: KoraMaple/nante-reusable-workflow
           ref: main
+          token: ${{ secrets.GH_PAT }}
 
       - name: Confirm Destruction
         run: |
