--- a/ansible/roles/base_setup/tasks/main.yml
+++ b/ansible/roles/base_setup/tasks/main.yml
@@ -77,6 +77,7 @@
         msg: "Alloy failed to start. See logs above for details."
   vars:
     alloy_config: |
+      // 1. Collect System Metrics
       prometheus.exporter.unix "default" {}
 
       prometheus.scrape "metrics" {
@@ -88,17 +89,22 @@
         endpoint {
           url = "http://{{ oo_host }}:5080/api/default/prometheus"
           basic_auth {
-            username = {{ oo_user | to_json }}
-            password = {{ oo_pass | to_json }}
+            username = "{{ oo_user | to_json }}"
+            password = "{{ oo_pass | to_json }}"
           }
         }
       }
 
-      loki.source.file "system_logs" {
-        targets    = [
-          { __path__ = "/var/log/*.log" },
-          { __path__ = "/var/log/syslog" }
+      // 2. Collect Logs (Fixed Syntax)
+      local.file_match "system_logs" {
+        path_targets = [
+          { "__path__" = "/var/log/*.log" },
+          { "__path__" = "/var/log/syslog" }, // <--- The missing comma was here!
         ]
+      }
+
+      loki.source.file "log_scrape" {
+        targets    = local.file_match.system_logs.targets
         forward_to = [loki.write.openobserve.receiver]
       }
 
@@ -106,8 +112,8 @@
         endpoint {
           url = "http://{{ oo_host }}:5080/api/default/loki/api/v1/push"
           basic_auth {
-            username = {{ oo_user | to_json }}
-            password = {{ oo_pass | to_json }}
+            username = "{{ oo_user | to_json }}"
+            password = "{{ oo_pass | to_json }}"
           }
         }
       }
