--- a/ansible/roles/base_setup/tasks/main.yml
+++ b/ansible/roles/base_setup/tasks/main.yml
@@ -89,8 +89,8 @@
         endpoint {
           url = "http://{{ oo_host }}:5080/api/default/prometheus"
           basic_auth {
-            username = "{{ oo_user | to_json }}"
-            password = "{{ oo_pass | to_json }}"
+            username = {{ oo_user | to_json }}
+            password = {{ oo_pass | to_json }}
           }
         }
       }
@@ -112,8 +112,8 @@
         endpoint {
           url = "http://{{ oo_host }}:5080/api/default/loki/api/v1/push"
           basic_auth {
-            username = "{{ oo_user | to_json }}"
-            password = "{{ oo_pass | to_json }}"
+            username = {{ oo_user | to_json }}
+            password = {{ oo_pass | to_json }}
           }
         }
       }
