--- a/ansible/roles/base_setup/tasks/main.yml
+++ b/ansible/roles/base_setup/tasks/main.yml
@@ -77,11 +77,47 @@
         msg: "Alloy failed to start. See logs above for details."
   vars:
     alloy_config: |
-      // 1. Collect System Metrics
+      // 1. Collect System Metrics (node_exporter)
       prometheus.exporter.unix "default" {}
 
+      // Add labels (hostname) to metrics
+      discovery.relabel "system_metrics" {
+        targets = prometheus.exporter.unix.default.targets
+        rule {
+          target_label = "instance"
+          replacement  = "{{ target_hostname }}"
+        }
+        rule {
+          target_label = "job"
+          replacement  = "node_exporter"
+        }
+      }
+
       prometheus.scrape "metrics" {
-        targets    = prometheus.exporter.unix.default.targets
+        targets    = discovery.relabel.system_metrics.output
+        forward_to = [prometheus.remote_write.openobserve.receiver]
+      }
+
+      // 1b. Collect Nginx Metrics
+      prometheus.exporter.nginx "nginx_metrics" {
+        address = "http://127.0.0.1:8080/stub_status"
+      }
+
+      // Add labels (hostname) to nginx metrics
+      discovery.relabel "nginx_metrics" {
+        targets = prometheus.exporter.nginx.nginx_metrics.targets
+        rule {
+          target_label = "instance"
+          replacement  = "{{ target_hostname }}"
+        }
+        rule {
+          target_label = "job"
+          replacement  = "nginx_metrics"
+        }
+      }
+
+      prometheus.scrape "nginx" {
+        targets    = discovery.relabel.nginx_metrics.output
         forward_to = [prometheus.remote_write.openobserve.receiver]
       }
 
@@ -95,17 +131,37 @@
         }
       }
 
-      // 2. Collect Logs (Fixed Syntax)
+      // 2. Collect System Logs
       local.file_match "system_logs" {
         path_targets = [
           { "__path__" = "/var/log/*.log" },
-          { "__path__" = "/var/log/syslog" }, // <--- The missing comma was here!
+          { "__path__" = "/var/log/syslog" },
         ]
       }
 
-      loki.source.file "log_scrape" {
+      loki.source.file "system_scrape" {
         targets    = local.file_match.system_logs.targets
         forward_to = [loki.write.openobserve.receiver]
+        labels     = {
+          host = "{{ target_hostname }}",
+          job  = "system",
+        }
+      }
+
+      // 3. Collect Nginx Logs
+      local.file_match "nginx_logs" {
+        path_targets = [
+          { "__path__" = "/var/log/nginx/*.log" },
+        ]
+      }
+
+      loki.source.file "nginx_scrape" {
+        targets    = local.file_match.nginx_logs.targets
+        forward_to = [loki.write.openobserve.receiver]
+        labels     = {
+          host = "{{ target_hostname }}",
+          job  = "nginx",
+        }
       }
 
       loki.write "openobserve" {
