--- a/ansible/roles/nginx/handlers/main.yml
+++ b/ansible/roles/nginx/handlers/main.yml
@@ -3,3 +3,8 @@
   service:
     name: nginx
     state: restarted
+
+- name: Restart Nginx Exporter
+  service:
+    name: prometheus-nginx-exporter
+    state: restarted
