--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -33,23 +33,17 @@
     state: started
     enabled: yes
 
-- name: Install Nginx Prometheus Exporter
-  apt:
-    name: prometheus-nginx-exporter
-    state: present
+- name: Add Nginx Exporter to Alloy Config
+  ansible.builtin.blockinfile:
+    path: /etc/alloy/config.alloy
+    marker: "// {mark} NGINX METRICS"
+    block: |
+      prometheus.exporter.nginx "web_server" {
+        address = "http://localhost:80/nginx_status"
+      }
 
-- name: Configure Nginx Prometheus Exporter
-  lineinfile:
-    path: /etc/default/prometheus-nginx-exporter
-    regexp: '^ARGS='
-    line: 'ARGS="-nginx.scrape-uri=http://127.0.0.1:8080/stub_status"'
-  notify: Restart Nginx Exporter
-
-- name: Ensure Nginx Exporter is started
-  service:
-    name: prometheus-nginx-exporter
-    state: started
-    enabled: yes
-
-- name: Force Nginx Restart if config changed
-  meta: flush_handlers
+      prometheus.scrape "nginx" {
+        targets    = prometheus.exporter.nginx.web_server.targets
+        forward_to = [prometheus.remote_write.grafana_stack.receiver]
+      }
+  notify: Restart Alloy
