fix:alloy handler error

--- a/ansible/roles/nginx/handlers/main.yml
+++ b/ansible/roles/nginx/handlers/main.yml
@@ -8,3 +8,8 @@
   service:
     name: prometheus-nginx-exporter
     state: restarted
+
+- name: Restart Alloy
+  service:
+    name: alloy
+    state: restarted
