--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -5,8 +5,8 @@
   vars:
     # We pull the authkey from the environment variable set in GitHub Action
     ts_authkey: "{{ lookup('env', 'TS_AUTHKEY') }}"
-    oo_user: "{{ lookup('env', 'OO_USER') }}"
-    oo_pass: "{{ lookup('env', 'OO_PASS') }}"
+    # oo_user: "{{ lookup('env', 'OO_USER') }}"
+    # oo_pass: "{{ lookup('env', 'OO_PASS') }}"
     # Sanitize OO_HOST to ensure it's just the IP/Hostname (strip http://, https://, and :port)
     oo_host: "{{ lookup('env', 'OO_HOST') | regex_replace('^https?://', '') | regex_replace(':[0-9]+$', '') }}"
   
