--- a/.github/workflows/reusable-destroy.yml
+++ b/.github/workflows/reusable-destroy.yml
@@ -35,6 +35,10 @@ on:
     secrets:
       DOPPLER_TOKEN:
         required: true
+      DOPPLER_TARGET_PROJECT:
+        required: true
+      DOPPLER_TARGET_CONFIG:
+        required: true
       GH_PAT:
         required: true
 
@@ -52,8 +56,6 @@ jobs:
 
       - name: Install Doppler CLI
         uses: dopplerhq/cli-action@v3
-        with:
-          doppler_token: ${{ secrets.DOPPLER_TOKEN }}
 
       - name: Confirm Destruction
         run: |
@@ -119,3 +121,5 @@ jobs:
           EOF
         env:
           DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
+          DOPPLER_TARGET_PROJECT: "${{ secrets.DOPPLER_TARGET_PROJECT }}"
+          DOPPLER_TARGET_CONFIG: "${{ secrets.DOPPLER_TARGET_CONFIG }}"
