--- a/.github/workflows/reusable-onboard.yml
+++ b/.github/workflows/reusable-onboard.yml
@@ -24,6 +24,10 @@ on:
     secrets:
       DOPPLER_TOKEN:
         required: true
+      DOPPLER_TARGET_PROJECT:
+        required: true
+      DOPPLER_TARGET_CONFIG:
+        required: true
       GH_PAT:
         required: true
 
@@ -40,8 +44,6 @@ jobs:
           
       - name: Install Doppler CLI
         uses: dopplerhq/cli-action@v3
-        with:
-          doppler_token: ${{ secrets.DOPPLER_TOKEN }}
 
       - name: Run Ansible with Doppler
         run: |
@@ -76,3 +78,5 @@ jobs:
           EOF
         env:
           DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
+          DOPPLER_TARGET_PROJECT: "${{ secrets.DOPPLER_TARGET_PROJECT }}"
+          DOPPLER_TARGET_CONFIG: "${{ secrets.DOPPLER_TARGET_CONFIG }}"
